--- a/view/css/common.css
+++ b/view/css/common.css
@@ -326,9 +326,9 @@ ul.navi li.next.active a {
 *************************/
 div.widget.blog-comment{position:relative;}
 div.widget.blog-comment button.green{float:right}
-div.widget.blog-comment div#bocadillo{background:url(bocadillo.jpg) no-repeat;position:absolute;width:56px;	height:51px;}
+div.widget.blog-comment div#bocadillo{background:url('/view/css/bocadillo.jpg') no-repeat;position:absolute;width:56px;	height:51px;}
 
 /* = enlace para volver arriba
 *******************************/
-a.up{display:inline-block;padding-left:15px; background:url(arrow-up3.png) no-repeat left; line-height:20px;}
-a.up:hover{background:url(arrow-up.png) no-repeat left;}
+a.up{display:inline-block;padding-left:15px;margin-left:18px; background:url('/view/css/arrow-up3.png') no-repeat left; line-height:20px;}
+a.up:hover{background:url('/view/css/arrow-up.png') no-repeat left;}
