--- a/view/css/header.css
+++ b/view/css/header.css
@@ -59,11 +59,13 @@ div#sub-header.banners{
 
 div#sub-header-secondary{
     background-color: #d7eaeb;
-/*	margin-top: 4px; */
+	height: 100px;
+	margin: 0 0 18px;
+	padding: 5px 0 0;
 }
 
 div#sub-header-secondary > div > h2{
-    font: bold 52px Helvetica, Arial, Geneva, sans-serif;
+    font: bold 38px/100px Helvetica, Arial, Geneva, sans-serif;
     margin: 0px;
     text-transform: uppercase;
 	width:40%;
@@ -74,7 +76,7 @@ div#sub-header-secondary > div > h2 a{
 	font-size:1em;
 	text-decoration:none;
 	position:relative;
-	left:12px;
+	left: 12px;
 }
 
 div#sub-header-secondary > div > h2 a:hover span.red{
@@ -271,12 +273,15 @@ div#sub-header > div > div.mod-pojctopen{
 }
 
 div#sub-header.banners > div > div.mod-pojctopen{
-	margin: 12px 20px 18px 0;
+	margin-right: 20px;
+	margin-top: 16px;
+	margin-left: 0;
 }
 
 div#sub-header > div > div.mod-pojctopen > .modpo-open{
-	font: bold 60px Helvetica, Arial, Geneva, sans-serif;
+	font: bold 58px/72px Helvetica, Arial, Geneva, sans-serif;
 	color:#ee4843;
+	text-align: center;
 }
 
 div#sub-header > div > div.mod-pojctopen > .modpo-percent{
@@ -284,7 +289,8 @@ div#sub-header > div > div.mod-pojctopen > .modpo-percent{
 	color:#1eb2b2;
 	margin: -10px 0 0;
 	border-bottom: 1px solid #a7a9ac;
-	padding:0 0 8px 7px
+	padding: 4px 0 8px;
+	text-align: center;
 }
 
 div#sub-header > div > div.mod-pojctopen > .modpo-whyopen{
@@ -404,11 +410,10 @@ div#sub-header > div > h2 .greenblue{
 
 /* subheader secundario  */
 div#sub-header-secondary > div > ul.share-goteo{
-	margin:20px 0 0 0;
+	margin: 40px 9px 0 0;
 	padding:0px;
 	list-style:none;
 	float:right;
-	font-size: 14px;
 }
 
 div#sub-header-secondary > div > ul.share-goteo li{
@@ -422,6 +427,7 @@ div#sub-header-secondary > div > ul.share-goteo li.rss a{
 	height:20px;
 	float:left;
 	padding: 4px 0 0 30px;
+	font-size: 11px;
 }
 div#sub-header-secondary > div > ul.share-goteo li.twitter a{
 	background: #d7eaeb url('sprite-socials-icons.gif') scroll no-repeat  0 0;
@@ -539,8 +545,8 @@ div#header div#highlights > ul > li {
 }
 
 div#header div#highlights > ul > li > a {
-    margin-left: 1em;
     white-space: nowrap;
+	margin-left: .2em;
 }
 /* fin del carrusel de micronoticias */
 
@@ -553,11 +559,13 @@ div#header div#menu {
 div#header div#menu > ul {
     max-width: 940px;
     margin: 0 auto;
-    padding: 0;
     position: relative;
     list-style: none;
     text-align: right;
     overflow: visible;
+	padding-bottom: 0;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 div#header div#menu > ul > li {
@@ -567,7 +575,7 @@ div#header div#menu > ul > li {
 
 div#header div#menu > ul > li.home {
     width: 90px;
-    height: 100%;
+    height: 48px;
     position: absolute;
     left: 0;
     top: 0;
@@ -583,8 +591,8 @@ div#header div#menu > ul > li.home > a {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -30px;
-    margin-top: -19px;
+    margin-left: -45px;
+    margin-top: -18px;
     background: url('header/goteo.png') no-repeat left center;        
 }
 
@@ -594,24 +602,25 @@ div#header div#menu > ul > li.home > a:hover {
 
 div#header div#menu > ul > li.explore,
 div#header div#menu > ul > li.create {
-    float: left;       
+    float: left;
+	margin-right: 4px;
 }
 
 div#header div#menu > ul > li.explore > a,
 div#header div#menu > ul > li.create > a {
     padding: .4em 1.8em .4em .8em;
     font-size: 12px;
-    line-height: 1em;
     color: white;
     display: inline-block;
-    margin: .6em .2em .6em 0;
+    margin: .68em .2em .6em 0;
     max-width: 7.5em;
     text-align: left;
 	width:80px;
+	line-height: 1em;
 }
 
 div#header div#menu > ul > li.explore > a {    
-    margin-left: 132px;
+    margin-left: 124px;
 }
 
 div#header div#menu > ul > li.search {
@@ -621,12 +630,11 @@ div#header div#menu > ul > li.search {
 
 div#header div#menu > ul > li.search fieldset {
     margin: 0;
-    padding: 0;
-    border: 1px solid #808184;    
-    padding-right: 1.6em;
+    padding: 0 1.5em 0 0;
+    border: 1px solid #808184;
     position: relative;
-	/*top:-4px;*/ /*bug 800x600 alineación vertical search*/
-    font-size: 14px;
+	/*top:-4px;*/ /*bug 800x600 alineaciÃƒÂ³n vertical search*/
+    font-size: 11px;
 }
 
 div#header div#menu > ul > li.search fieldset legend {
@@ -635,11 +643,11 @@ div#header div#menu > ul > li.search fieldset legend {
 
 div#header div#menu > ul > li.search fieldset input[type="text"] {
     border: none;
-    height: 12px;
+    height: 11px;
     padding: .2em;
     background-color: transparent;
-    font-size: 14px;
-    width: 10em;
+    font-size: 11px;
+    width: 12em;
 }
 
 div#header div#menu > ul > li.search fieldset input[type="text"]:focus {
@@ -647,20 +655,18 @@ div#header div#menu > ul > li.search fieldset input[type="text"]:focus {
 }
 
 div#header div#menu > ul > li.search fieldset input[type="submit"] {
-    border: none;
+
     background: transparent url('header/search.png') no-repeat center center;
     display: block;
     position: absolute;
     right: 0;
-    top: 0;
-    width: 1.6em;
-    height: 18px;    
+    top: 0;    
     padding: 0;
     overflow: hidden;
-    line-height: 2000px;
     text-indent: 2000px;
     margin: 0;
-    border-left: 1px solid #808184;        
+	height: 15px;
+	width: 1.6em;
 }
 
 div#header div#menu > ul > li.search fieldset input[type="submit"]:hover {
@@ -670,8 +676,7 @@ div#header div#menu > ul > li.search fieldset input[type="submit"]:hover {
 div#header div#menu > ul > li.community ,
 div#header div#menu > ul > li.login ,
 div#header div#menu > ul > li.dashboard {
-    height: 3.2em;    
-    font-size: 13px;    
+    height: 48px;    
     position: relative;
 	
 } 
@@ -704,7 +709,7 @@ div#header div#menu > ul > li.community > a,
 div#header div#menu > ul > li.login > a,
 div#header div#menu > ul > li.dashboard > a {
     padding: .5em .8em;
-    font-size: 13px;
+    font-size: 12px;
     height: 40px;
     line-height: 40px;
     display: inline-block;    
